--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
+    "eslint-config-next": "^13.4.3",
+    "next": "^13.4.3",
     "postcss": "8.4.22",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
